--- a/sass/blog/_blog.scss
+++ b/sass/blog/_blog.scss
@@ -1,5 +1,5 @@
 .post {
-	border-top: 1px solid $light-grey;
+	border-top: 1px solid $color__border-default;
 	padding-top: 1em;
 	margin-bottom: 2em;
 	&:first-of-type {
