--- a/sass/media/_captions.scss
+++ b/sass/media/_captions.scss
@@ -1,6 +1,6 @@
 .wp-caption {
 	background: $white;
-	border: solid 1px $light-grey; 
+	border: solid 1px $color__border-default;
 	padding: 3px;
 	margin-bottom: 20px;
 	max-width: 100%;
