--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,20 @@
+/*
+Theme Name: Bluelime Starter theme
+Theme URI: http://www.bluelimemedia.com
+Description: Responsive Starter theme with Sass
+Version: 1.0
+
+License: GNU General Public License v2.0
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+More information: http://codex.wordpress.org/Theme_Review#Licensing
+
+Author: Christine Rondeau
+Author URI: http://www.bluelimemedia.com
+
+
+*/
+
+
 // Colours
 $black: #404040;
 $white: #fff;
