--- a/sass/header/_branding.scss
+++ b/sass/header/_branding.scss
@@ -1,8 +1,8 @@
 .site-title {
 	margin: 0;
 	a {	
-		background: url("../images/logo.png") no-repeat;
-		@include image-2x("../images/logo@2x.png", 200px, 50px);
+		background: url("images/logo.png") no-repeat;
+		@include image-2x("images/logo@2x.png", 200px, 50px);
 		display: block;
 		height: 50px;
 		margin: 10px auto;
