--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 /*
-Theme Name: Bluelime Starter theme
+Theme Name: WP Starter theme
 Theme URI: http://www.bluelimemedia.com
 Description: Responsive Starter theme with Sass
 Version: 1.0
