--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Bluelime Starter theme
+Theme Name: WP Starter theme
 Theme URI: http://www.bluelimemedia.com
 Description: Responsive Starter theme with Sass
 Version: 1.0
@@ -503,7 +503,7 @@ td, th {
   margin: 0;
 }
 .site-title a {
-  background: url("../images/logo.png") no-repeat;
+  background: url("images/logo.png") no-repeat;
   display: block;
   height: 50px;
   margin: 10px auto;
@@ -513,7 +513,7 @@ td, th {
 @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
   .site-title a {
     /* on retina, use image that's scaled by 2 */
-    background-image: url("../images/logo@2x.png");
+    background-image: url("images/logo@2x.png");
     background-size: 200px 50px;
   }
 }
