--- a/sass/_accessibility.scss
+++ b/sass/_accessibility.scss
@@ -9,13 +9,13 @@
 	&:hover,
 	&:active,
 	&:focus {
-		background-color: $color__background-screen;
+		background-color: #f1f1f1;
 		@include border-radius(3px);
 		box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
 		clip: auto !important;
-		color: $color__text-screen;
+		color: #21759b;
 		display: block;
-		font-size: $font__size-small;
+		font-size: 14px;
 		font-weight: bold;
 		height: auto;
 		left: 5px;
