Adjusted header and navigation.

--- a/sass/navigation/_navigation.scss
+++ b/sass/navigation/_navigation.scss
@@ -13,7 +13,7 @@
 				display: block;
 			}
 			a {
-				color: $white;
+				color: $color__link-background;
 				display: block;
 				padding: 5px;
 				text-decoration: none;
