Updated the border color variable in sidebar.

--- a/sass/sidebar/_sidebar.scss
+++ b/sass/sidebar/_sidebar.scss
@@ -5,7 +5,7 @@
 }
 
 .sidebar-title {
-	border-bottom: 1px solid $light-grey;
+	border-bottom: 1px solid $color__border-default;
 	text-transform: uppercase;	
 }
 
