Set up distinct font family for headings.

--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -1,7 +1,7 @@
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
 	color: $color__heading;
-	font-family: $font__serif;
+	font-family: $font__heading;
 	font-weight: 400;
 }
 
