--- a/sass/style.scss
+++ b/sass/style.scss
@@ -56,6 +56,7 @@ $color__border-input: $silver;
 // Fonts
 $font__sans: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font__serif: 'Droid Serif', Georgia, Times, 'Times New Roman', serif;
+$font__heading: 'Droid Serif', Georgia, Times, 'Times New Roman', serif;
 $font__line-height-body: 1.5;
 $font__size-xlarge: 30px;
 $font__size-large: 22px;
