--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: WP Starter theme
+Theme Name: Bluelime Basic Starter theme
 Theme URI: http://www.bluelimemedia.com
-Description: Responsive Starter theme with Sass
+Description: Responsive Starter theme with Sass created by Bluelime Media. 
 Version: 1.0
 
 License: GNU General Public License v2.0
