Updated the menu. I find myself deleting the flex box menu over and over again.

--- a/sass/navigation/_mobile-menu.scss
+++ b/sass/navigation/_mobile-menu.scss
@@ -6,7 +6,9 @@
 		ul {
 			display: none;
 			padding-left: 0;
+			text-align: left;
 			li {
+				display: block;
 				border-top: 1px solid $color__border-default;
 				a {
 					background: $color__text-main;
