Updated classes to BEM format. Removed sidebar from page template.

--- a/sass/blog/_entrymeta.scss
+++ b/sass/blog/_entrymeta.scss
@@ -1,5 +1,5 @@
-.entry-meta,
-.entry-footer {
+.entry__meta,
+.entry__meta--footer {
 	color: $grey;
 	font-size: $font__size-small;
 	margin-bottom: 15px;
