--- a/sass/style.scss
+++ b/sass/style.scss
@@ -75,6 +75,7 @@ $phone-landscape:       30.00em;  // 480px
 $phone-portrait:        20.00em;  // 320px
 
 $max-width: 1200px;
+$max-content-width: 800px;
 
 @import "_mixins";
 
