Updated more classes BEM style to blog. Leaving all the classes that are WordPress generated alone.

--- a/sass/blog/_entrymeta.scss
+++ b/sass/blog/_entrymeta.scss
@@ -4,7 +4,7 @@
 	font-size: $font__size-small;
 	margin-bottom: 15px;
 }
-.cat-links, .tags-links, .comments-link {
+.links__cat, .links__tag, .link__comment {
   margin-right: 1em;
 }
 
