--- a/sass/blog/_post-pagination.scss
+++ b/sass/blog/_post-pagination.scss
@@ -1,6 +1,6 @@
 /* Post pagination
 ----------------------------------------------- */
-.paging-navigation {
+.paging-nav {
 	padding: 15px 0;
 	ul {
 		list-style: none;
