Updated header and titles to BEM format.

--- a/sass/header/_branding.scss
+++ b/sass/header/_branding.scss
@@ -1,4 +1,4 @@
-.site-title {
+.site__title {
 	margin: 0;
 	a {	
 		background: url("images/logo.png") no-repeat;
@@ -15,7 +15,7 @@
 	}
 }
 
-.site-description {
+.site__description {
 	display: none;
 	margin: 0;
 }
