--- a/style.css
+++ b/style.css
@@ -100,7 +100,13 @@ h2 a { text-decoration: none; }
 
 h2 a:hover { text-decoration: underline; }
 
-h3, h4, h5, h6 { font-size: 18px; margin: 15px 0; }
+h3 { font-size: 18px; margin: 15px 0; }
+
+h4 { font-size: 18px; margin: 15px 0; }
+
+h4.title__sidebar { border-bottom: 1px solid #eee; text-transform: uppercase; }
+
+h5, h6 { font-size: 16px; margin: 10px 0; }
 
 blockquote { color: #404040; font-style: italic; margin: 0.5em 0; padding: 0.5em 1em 0; }
 
@@ -122,7 +128,7 @@ dt { font-weight: bold; }
 
 dd { margin: 0 1.5em 1.5em; }
 
-.no-padding-list, .main-navigation ul { list-style-type: none; margin: 0; padding: 0; }
+.no-padding-list, .main__nav ul { list-style-type: none; margin: 0; padding: 0; }
 
 img { height: auto; /* Make sure images are scaled correctly. */ max-width: 100%; /* Adhere to container width. */ }
 
@@ -138,11 +144,11 @@ td, th { padding: 3px 5px; }
 ---------------------------*/
 .row { width: 100%; }
 
-.container, .container--narrow { display: block; margin: 0 auto; width: 100%; max-width: 1200px; }
+.container, .container--narrow, .site__header--wrapper { display: block; margin: 0 auto; position: relative; width: 100%; max-width: 1200px; }
 
-.container:before, .container--narrow:before, .container:after, .container--narrow:after { content: ""; display: table; }
+.container:before, .container--narrow:before, .site__header--wrapper:before, .container:after, .container--narrow:after, .site__header--wrapper:after { content: ""; display: table; }
 
-.container:after, .container--narrow:after { clear: both; }
+.container:after, .container--narrow:after, .site__header--wrapper:after { clear: both; }
 
 .container--narrow { max-width: 800px; }
 
@@ -166,79 +172,79 @@ td, th { padding: 3px 5px; }
 
 .content__fourofour { display: block; margin: 0 auto; max-width: 500px; padding-top: 50px; padding-bottom: 200px; width: 100%; }
 
-.site-header { background: #404040; }
+.site__header { background: #404040; }
 
-@media screen and (min-width: 48em) { .site-header { padding: 20px 0; } }
+@media screen and (min-width: 48em) { .site__header { padding: 20px 0; } }
 
-.header-wrapper { display: -webkit-box; display: -webkit-flex; display: -moz-flex; display: -ms-flexbox; display: flex; -webkit-box-direction: normal; -webkit-box-orient: vertical; -webkit-flex-direction: column; -moz-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
+.site__header--wrapper { display: -webkit-box; display: -webkit-flex; display: -moz-flex; display: -ms-flexbox; display: flex; -webkit-box-direction: normal; -webkit-box-orient: vertical; -webkit-flex-direction: column; -moz-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
 
-.header-wrapper .site-branding { -webkit-box-ordinal-group: 3; -webkit-order: 2; -moz-order: 2; -ms-flex-order: 2; order: 2; }
+.site__header--wrapper .site__branding { -webkit-box-ordinal-group: 3; -webkit-order: 2; -moz-order: 2; -ms-flex-order: 2; order: 2; }
 
-.header-wrapper .site-navigation { -webkit-box-ordinal-group: 2; -webkit-order: 1; -moz-order: 1; -ms-flex-order: 1; order: 1; }
+.site__header--wrapper .site__nav { -webkit-box-ordinal-group: 2; -webkit-order: 1; -moz-order: 1; -ms-flex-order: 1; order: 1; }
 
-@media screen and (min-width: 37.5em) { .header-wrapper .site-branding { width: 100%; -webkit-box-ordinal-group: 2; -webkit-order: 1; -moz-order: 1; -ms-flex-order: 1; order: 1; }
-  .header-wrapper .site-navigation { width: 100%; -webkit-box-ordinal-group: 3; -webkit-order: 2; -moz-order: 2; -ms-flex-order: 2; order: 2; } }
+@media screen and (min-width: 37.5em) { .site__header--wrapper .site__branding { width: 100%; -webkit-box-ordinal-group: 2; -webkit-order: 1; -moz-order: 1; -ms-flex-order: 1; order: 1; }
+  .site__header--wrapper .site__nav { width: 100%; -webkit-box-ordinal-group: 3; -webkit-order: 2; -moz-order: 2; -ms-flex-order: 2; order: 2; } }
 
-@media screen and (min-width: 48em) { .header-wrapper { -webkit-box-direction: normal; -webkit-box-orient: horizontal; -webkit-flex-direction: row; -moz-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -ms-flex-align: center; -webkit-align-items: center; -moz-align-items: center; align-items: center; }
-  .header-wrapper .site-branding { width: 30%; }
-  .header-wrapper .site-navigation { width: 70%; } }
+@media screen and (min-width: 48em) { .site__header--wrapper { -webkit-box-direction: normal; -webkit-box-orient: horizontal; -webkit-flex-direction: row; -moz-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -ms-flex-align: center; -webkit-align-items: center; -moz-align-items: center; align-items: center; }
+  .site__header--wrapper .site__branding { width: 30%; }
+  .site__header--wrapper .site__nav { width: 70%; } }
 
-.site-title { margin: 0; }
+.site__title { margin: 0; }
 
-.site-title a { background: url("images/logo.png") no-repeat; display: block; height: 50px; margin: 10px auto; text-indent: -9999px; width: 200px; }
+.site__title a { background: url("images/logo.png") no-repeat; display: block; height: 50px; margin: 10px auto; text-indent: -9999px; width: 200px; }
 
-@media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) { .site-title a { /* on retina, use image that's scaled by 2 */ background-image: url("images/logo@2x.png"); background-size: 200px 50px; } }
+@media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) { .site__title a { /* on retina, use image that's scaled by 2 */ background-image: url("images/logo@2x.png"); background-size: 200px 50px; } }
 
-@media screen and (min-width: 48em) { .site-title a { margin: 0; padding: 0; } }
+@media screen and (min-width: 48em) { .site__title a { margin: 0; padding: 0; } }
 
-.site-description { display: none; margin: 0; }
+.site__description { display: none; margin: 0; }
 
-.main-navigation ul { text-align: center; }
+.main__nav ul { text-align: center; }
 
-@media screen and (min-width: 48em) { .main-navigation ul { text-align: right; } }
+@media screen and (min-width: 48em) { .main__nav ul { text-align: right; } }
 
-.main-navigation ul li { display: inline-block; position: relative; }
+.main__nav ul li { display: inline-block; position: relative; }
 
-.main-navigation ul li:hover { color: #fff; background: #339966; }
+.main__nav ul li:hover { color: #fff; background: #339966; }
 
-.main-navigation ul li:hover ul { display: block; }
+.main__nav ul li:hover ul { display: block; }
 
-.main-navigation ul li a { color: #fff; display: block; padding: 5px 20px; text-decoration: none; }
+.main__nav ul li a { color: #fff; display: block; padding: 5px 20px; text-decoration: none; }
 
-.main-navigation ul li a:hover { background: #339966; color: #fff; }
+.main__nav ul li a:hover { background: #339966; color: #fff; }
 
-.main-navigation ul ul { background: #fff; box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2); display: none; float: left; left: 0; padding: 0; position: absolute; text-align: left; z-index: 99999; }
+.main__nav ul ul { background: #fff; box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2); display: none; float: left; left: 0; padding: 0; position: absolute; text-align: left; z-index: 99999; }
 
-.main-navigation ul ul ul { top: 0; left: 100%; }
+.main__nav ul ul ul { top: 0; left: 100%; }
 
-.main-navigation ul ul a { color: #404040; width: 200px; }
+.main__nav ul ul a { color: #404040; width: 200px; }
 
-.main-navigation ul ul a:hover, .main-navigation ul ul a:focus { background: #339966; color: #fff; }
+.main__nav ul ul a:hover, .main__nav ul ul a:focus { background: #339966; color: #fff; }
 
-.main-navigation .current_page_item > a, .main-navigation .current-menu-item > a, .main-navigation .current_page_ancestor > a, .main-navigation .current_page_item > a:hover, .main-navigation .current-menu-item > a:hover, .main-navigation .current_page_item > a:focus, .main-navigation .current-menu-item > a:focus { background: #339966; color: #fff; }
+.main__nav .current_page_item > a, .main__nav .current-menu-item > a, .main__nav .current_page_ancestor > a, .main__nav .current_page_item > a:hover, .main__nav .current-menu-item > a:hover, .main__nav .current_page_item > a:focus, .main__nav .current-menu-item > a:focus { background: #339966; color: #fff; }
 
-.main-navigation ul ul .current_page_parent, .main-navigation .current_page_parent .current_page_item > a { background: #fff; color: #404040; }
+.main__nav ul ul .current_page_parent, .main__nav .current_page_parent .current_page_item > a { background: #fff; color: #404040; }
 
-.main-navigation ul ul .current_page_parent:hover, .main-navigation .current_page_parent .current_page_item > a:hover { background: #339966; color: #fff; }
+.main__nav ul ul .current_page_parent:hover, .main__nav .current_page_parent .current_page_item > a:hover { background: #339966; color: #fff; }
 
-.menu-toggle { cursor: pointer; display: none; padding: 10px; }
+.main__nav--toggle { cursor: pointer; display: none; padding: 10px; }
 
-@media screen and (max-width: 37.5em) { .menu-toggle { background: #404040; border: none; color: #fff; display: inline-block; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; margin: 0; text-decoration: none; text-align: left; text-transform: uppercase; width: 100%; }
-  .menu-toggle a, .menu-toggle a:hover { color: #fff; text-decoration: none; }
-  .menu-toggle:before { content: '\2261'; margin-right: 10px; } }
+@media screen and (max-width: 37.5em) { .main__nav--toggle { background: #404040; border: none; color: #fff; display: inline-block; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; margin: 0; text-decoration: none; text-align: left; text-transform: uppercase; width: 100%; }
+  .main__nav--toggle a, .main__nav--toggle a:hover { color: #fff; text-decoration: none; }
+  .main__nav--toggle:before { content: '\2261'; margin-right: 10px; } }
 
-@media screen and (max-width: 37.5em) { .main-navigation.toggled .nav-menu { display: block; }
-  .main-navigation ul { display: none; padding-left: 0; text-align: left; }
-  .main-navigation ul li { display: block; border-top: 1px solid #eee; }
-  .main-navigation ul li a { background: #404040; color: #fff; padding: 10px 20px; }
-  .main-navigation ul li a:hover { background: rgba(64, 64, 64, 0.8); }
-  .main-navigation ul ul, .main-navigation ul ul ul { box-shadow: none; position: relative; top: inherit; left: 0; display: block; float: none; width: 100%; }
-  .main-navigation ul ul li, .main-navigation ul ul ul li { border: none; }
-  .main-navigation ul ul a { padding-left: 40px; width: 100%; }
-  .main-navigation ul ul ul a { padding-left: 60px; }
-  .main-navigation .current_page_item > a, .main-navigation .current-menu-item > a, .main-navigation .current_page_ancestor > a, .main-navigation .current_page_item > a:hover, .main-navigation .current-menu-item > a:hover, .main-navigation .current_page_item > a:focus, .main-navigation .current-menu-item > a:focus { background: #404040; color: #fff; }
-  .main-navigation ul ul .current_page_parent, .main-navigation .current_page_parent .current_page_item > a { background: #404040; color: #fff; }
-  .main-navigation ul ul .current_page_parent:hover, .main-navigation .current_page_parent .current_page_item > a:hover { background: rgba(64, 64, 64, 0.8); color: #fff; } }
+@media screen and (max-width: 37.5em) { .main__nav.toggled .nav-menu { display: block; }
+  .main__nav ul { display: none; padding-left: 0; text-align: left; }
+  .main__nav ul li { display: block; border-top: 1px solid #eee; }
+  .main__nav ul li a { background: #404040; color: #fff; padding: 10px 20px; }
+  .main__nav ul li a:hover { background: rgba(64, 64, 64, 0.8); }
+  .main__nav ul ul, .main__nav ul ul ul { box-shadow: none; position: relative; top: inherit; left: 0; display: block; float: none; width: 100%; }
+  .main__nav ul ul li, .main__nav ul ul ul li { border: none; }
+  .main__nav ul ul a { padding-left: 40px; width: 100%; }
+  .main__nav ul ul ul a { padding-left: 60px; }
+  .main__nav .current_page_item > a, .main__nav .current-menu-item > a, .main__nav .current_page_ancestor > a, .main__nav .current_page_item > a:hover, .main__nav .current-menu-item > a:hover, .main__nav .current_page_item > a:focus, .main__nav .current-menu-item > a:focus { background: #404040; color: #fff; }
+  .main__nav ul ul .current_page_parent, .main__nav .current_page_parent .current_page_item > a { background: #404040; color: #fff; }
+  .main__nav ul ul .current_page_parent:hover, .main__nav .current_page_parent .current_page_item > a:hover { background: rgba(64, 64, 64, 0.8); color: #fff; } }
 
 .post { border-top: 1px solid #eee; padding-top: 1em; margin-bottom: 2em; }
 
@@ -316,8 +322,6 @@ td, th { padding: 3px 5px; }
 /* Sidebar Area 
 -------------------------------------------*/
 .widget { padding: 0 0 30px 0; }
-
-.sidebar-title { border-bottom: 1px solid #eee; text-transform: uppercase; }
 
 .sidebar ul { list-style: none; margin-left: 0.5em; }
 
