Updated all the titles to BEM format.

--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -10,10 +10,10 @@ textarea {
 }
 
 p {
-	margin-bottom: 1em;
+	margin-bottom: 10px;
 }
 
-.small-text {
+.text--small {
 	font-size: $font__size-small;
 }
 
