--- a/sass/typography/_links.scss
+++ b/sass/typography/_links.scss
@@ -19,4 +19,24 @@ a {
 	&.comment-reply-link {
 		@extend .link__more;
 	}
+	&.button {
+		background: $color__background-button;
+		border: 1px solid $color__border-button;
+		@include border-radius(2px);
+		color: $white;
+		cursor: pointer; 
+		display: inline-block;
+		font-size: $font__size-small;
+		padding: 5px 20px;
+		text-decoration: none;
+		text-transform: uppercase;
+		&:hover {
+			background: $color__background-button-hover;
+			border-color: $color__border-button-hover;
+		}
+		&:focus, 
+		&:active {
+			border-color: $color__border-button-focus;
+		}
+	}
 }
